--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         
         <ul>
             <li class="brand"><img src="logo.png" alt="spotify">spotify</li>
-            <li>Home</li>
+           <li><a href="https://open.spotify.com/" onclick="onclick">Home</a></a></li>
             <li>About</li>
         </ul>
 
